--- a/template/index.html
+++ b/template/index.html
@@ -7,17 +7,30 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-    
+
     <nav class="navbar" style="background-color: #000000;" data-bs-theme="dark">
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    Servidor de imagenes
-                </a>
-            </div>
-        </nav>
-    <img src="images/image.png" alt="Logo" width="80" height="70" class="d-inline-block align-text-top">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
+        <a class="navbar-brand text-white" href="#">
+        Servidor de imagenes
+        </a>
+        <img src="images/image.png" alt="Logo" width="80" height="70" class="d-inline-block align-text-top">
+    </div>
     </nav>
+
+    <div class="container my-4">
+    <h5 class="text-muted">Hostname: DESKTOP-IOKOTP6</h5>
+    <h3 class="fw-bold">Tema: Lugares emblemáticos del mundo</h3>
+    </div>
+
+    <div class="container">
+    
+        aqui van imagenes... laburanding
+    </div>
+
+
+    <footer class="text-center text-white mt-5 py-5" style="background-color: #000000; font-size: 30px; position: fixed; bottom: 0; width: 100%;">
+        <small>Computación en la nube — Jahn Carlos Martinez y Juan David Guzman — 2025-2</small>
+    </footer>
 
 
 
