--- a/template/index.html
+++ b/template/index.html
@@ -13,7 +13,7 @@
         <a class="navbar-brand text-white" href="#">
         Servidor de imagenes
         </a>
-        <img src="images/image.png" alt="Logo" width="80" height="70" class="d-inline-block align-text-top">
+        <img src="image/image.png" alt="Logo" width="80" height="70" class="d-inline-block align-text-top">
     </div>
     </nav>
 
@@ -22,17 +22,19 @@
     <h3 class="fw-bold">Tema: Lugares emblemáticos del mundo</h3>
     </div>
 
-    <div class="container">
-    
-        aqui van imagenes... laburanding
+    <div class="container" style="margin-bottom: 120px;">
+    aqui van imagenes... laburanding
     </div>
 
-
-    <footer class="text-center text-white mt-5 py-5" style="background-color: #000000; font-size: 30px; position: fixed; bottom: 0; width: 100%;">
-        <small>Computación en la nube — Jahn Carlos Martinez y Juan David Guzman — 2025-2</small>
+    <footer class="text-white py-4 px-3" style="background-color: #000000; font-size: 22px; position: fixed; bottom: 0; width: 100%;">
+    <div class="container-fluid">
+        <div class="row text-center">
+        <div class="col text-start">Computación en la nube</div>
+        <div class="col">Jahn Carlos Martinez y Juan David Guzman</div>
+        <div class="col text-end">2025-2</div>
+        </div>
+    </div>
     </footer>
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
